--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,13 @@ platform:
   arch: arm
 
 steps:
+  - name: gate
+    image: bdebyl/alpine-git
+    commands:
+      - git fetch origin +refs/head/master
+      - git show-ref
+      - git diff --name-only $(git merge-base refs/remotes/origin/master HEAD)..HEAD | grep Dockerfile || exit 78
+
   - name: build
     image: plugins/docker
     settings:
