Fixed typo of refs/head/ to refs/heads/

--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,7 @@ steps:
   - name: gate
     image: bdebyl/alpine-git
     commands:
-      - git fetch origin +refs/head/master
+      - git fetch origin +refs/heads/master
       - git show-ref
       - git diff --name-only $(git merge-base refs/remotes/origin/master HEAD)..HEAD | grep Dockerfile || exit 78
 
