--- a/.drone.yml
+++ b/.drone.yml
@@ -7,12 +7,26 @@ platform:
   arch: arm
 
 steps:
-  - name: gate
+  - name: gate-master
+    image: bdebyl/alpine-git
+    commands:
+      - git fetch origin +refs/heads/master
+      - git show-ref
+      - git diff --name-only HEAD~1..HEAD | grep Dockerfile || exit 78
+    when:
+      branch:
+        - master
+
+  - name: gate-pr
     image: bdebyl/alpine-git
     commands:
       - git fetch origin +refs/heads/master
       - git show-ref
       - git diff --name-only $(git merge-base refs/remotes/origin/master HEAD)..HEAD | grep Dockerfile || exit 78
+    when:
+      branch:
+        exclude:
+          - master
 
   - name: build
     image: plugins/docker
@@ -23,4 +37,6 @@ steps:
         from_secret: docker_password
       repo: bdebyl/yamllint
       auto_tag: true
-
+		when:
+			branch:
+				- master
