changed step build name to publish

--- a/.drone.yml
+++ b/.drone.yml
@@ -28,7 +28,7 @@ steps:
         exclude:
           - master
 
-  - name: build
+  - name: publish
     image: plugins/docker
     settings:
       username:
